@@ -51,6 +51,26 @@ tcltest::test nocase-1 {check case insensitivity} {
     $t get 1.0 {end - 1 char}
 } "f1.c:1:int ONE\;\nf2.c:1:INT TWO\;\n"
 
+tcltest::test crlf-1 {check that mixing cr and
+        crlf in the same file is ok} {
+    if {[llength [itcl::find object tgd]]} {
+        itcl::delete object tgd
+    }
+    destroy .t
+    set d [sourcenav::TclGrepDriver tgd]
+    set t [text .t]
+    $d setTextWidget $t
+    set data    "int ONE;\r\n"
+    append data "int TWO;\n"
+    append data "int THREE;\r\n"
+    tcltest::makeFile $data f1.c
+    $d start int f1.c 0 10
+    $d finish
+    $t get 1.0 {end - 1 char}
+} "f1.c:1:int ONE\;\nf1.c:2:int TWO\;\nf1.c:3:int THREE;\n"
+
+
+
 # Cleanup
 
 if {[llength [itcl::find object tgd]]} {
